# DistributedMQ

./: CMakeLists.txt  Consumer.cpp  Consumer.hpp  LocalQ.cpp  LocalQ.hpp  Msg.cpp  Msg.hpp  Producer.cpp  Producer.hpp  Q.cpp  Q.hpp  QM.cpp  QM.hpp  README.md  RT.cpp  RT.hpp  RcvMCA.cpp  RcvMCA.hpp  RemoteQ.cpp  RemoteQ.hpp  SendMCA.cpp  SendMCA.hpp  main.cpp  param.hpp
ExperimentCPP/: Demo.cpp  Demo.hpp  DemoMAP.hpp  ExpMain.cpp
TestAsync/: AsyncMain.cpp
TestLocalMQ/: mqrcv.c  mqrcv.cpp  mqsend.c  mqsend.cpp
TestSocket/: socketclient.cpp  socketserver.cpp
TestTemplate/: A.hpp  B.hpp  C.hpp  TemplateMain.cpp
